--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facundo Neffa | .NET Backend Developer</title>
+    
     <style>
     /* Estilos Generales */
     body {
@@ -94,6 +96,33 @@
     background: #0078d4;
     transform: scale(1.05);
 }
+        .tech-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    padding: 15px;
+    background: rgba(255, 255, 255, 0.03);
+    border-radius: 10px;
+    transition: transform 0.3s;
+}
+
+.tech-item:hover {
+    transform: translateY(-5px);
+    background: rgba(0, 120, 212, 0.1);
+}
+
+.tech-item i {
+    font-size: 2rem;
+    color: #0078d4; /* El azul que ya usas */
+}
+
+.tech-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    gap: 15px;
+    margin-top: 20px;
+}
 </style>
 </head>
 <body>
@@ -114,14 +143,28 @@
         </section>
         
         <section id="tecnologias">
-    <h2>Skills profesionales</h2>
-    <div class="tech-stack">
-        <span class="tech-badge">.NET Core / Framework</span>
-        <span class="tech-badge">C#</span>
-        <span class="tech-badge">SQL Server</span>
-        <span class="tech-badge">Power BI</span>
-        <span class="tech-badge">Git / GitHub</span>
-        <span class="tech-badge">APIs REST</span>
+    <h2>Tecnologías</h2>
+    <div class="tech-grid">
+        <div class="tech-item">
+            <i class="fa-brands fa-microsoft"></i>
+            <span>.NET</span>
+        </div>
+        <div class="tech-item">
+            <i class="fa-solid fa-code"></i>
+            <span>C#</span>
+        </div>
+        <div class="tech-item">
+            <i class="fa-solid fa-database"></i>
+            <span>SQL Server</span>
+        </div>
+        <div class="tech-item">
+            <i class="fa-brands fa-git-alt"></i>
+            <span>Git</span>
+        </div>
+        <div class="tech-item">
+            <i class="fa-solid fa-chart-column"></i>
+            <span>Power BI</span>
+        </div>
     </div>
 </section>
 
@@ -192,4 +235,5 @@
 </body>
 
 </html>
+
 
