--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <h2>Certificaciones</h2>
     <div class="cert-grid">
         <div class="card bg-dark text-white border-primary" style="width: 18rem;">
-  <img src="https://drive.google.com/file/d/1F66TehmCFV3Hr9zqeAVFCF2e2xre9b8a/view?usp=drive_link" class="card-img-top" alt="Certificación">
+  <img src="C:\Users\jneffa\Desktop\Facundo Neffa\Certificados\Bases de datos.jpeg" class="card-img-top" alt="Certificación">
   <div class="card-body">
     <h5 class="card-title text-primary">Bases de Datos</h5>
     <p class="card-text">Curso de SQL Server y modelado de datos.</p>
@@ -114,18 +114,18 @@
 </div>
 
         <div class="card bg-dark text-white border-primary" style="width: 18rem;">
-  <img src="https://drive.google.com/file/d/188yFr6dktQeiOd5zRMs9UzYmdbAfamce/view?usp=drive_link" class="card-img-top" alt="Certificación">
+  <img src="C:\Users\jneffa\Desktop\Facundo Neffa\Certificados\Power BI.jpeg" class="card-img-top" alt="Certificación">
   <div class="card-body">
-    <h5 class="card-title text-primary">Bussines Intelicence</h5>
-    <p class="card-text">Curso de Power BI.</p>
+    <h5 class="card-title text-primary">Bases de Datos</h5>
+    <p class="card-text">Curso de SQL Server y modelado de datos.</p>
     <a href="https://drive.google.com/file/d/1tuv6hD8ThuiEUJl0aAYyyxDCrMj0lUE4/view?usp=drive_link" class="btn btn-primary w-100">Ver Credencial</a>
   </div>
 </div>
 <div class="card bg-dark text-white border-primary" style="width: 18rem;">
-  <img src="C:\Users\facu_\OneDrive\Escritorio\Facundo Neffa\Certificados\MVC-EF.png" class="card-img-top" alt="Certificación">
+  <img src="https://github.com/FacuNeffa/Portfolio/blob/main/Certificados/MVC-EF.png" class="card-img-top" alt="Certificación">
   <div class="card-body">
-    <h5 class="card-title text-primary">MVC + EF</h5>
-    <p class="card-text">Curso de MVC y Entity Framework.</p>
+    <h5 class="card-title text-primary">Bases de Datos</h5>
+    <p class="card-text">Curso de SQL Server y modelado de datos.</p>
     <a href="https://drive.google.com/file/d/1T5H2SIswjr7-LCEpV0cD2KWs4cqxHQ3j/view?usp=drive_link" class="btn btn-primary w-100">Ver Credencial</a>
   </div>
 </div>
@@ -152,7 +152,7 @@
         <section id="contacto">
             <h2>Contacto</h2>
             <div class="contact-links">
-                <p>📧 Email: <a href="facundoneffa@gmail.com">Contacto</a></p>
+                <p>📧 Email: <a href="facundoneffa@gmail.com">facundoneffa@gmail.com</a></p>
                 <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/facundo-neffa-02b38814b/" target="_blank">linkedin.com/in/facundo</a></p>
                 <p>💻 GitHub: <a href="https://github.com/" target="_blank">github.com/facundo</a></p>
             </div>
