--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@
         <div class="card bg-dark text-white border-primary" style="width: 18rem;">
   <img src="C:\Users\jneffa\Desktop\Facundo Neffa\Certificados\Power BI.jpeg" class="card-img-top" alt="Certificación">
   <div class="card-body">
-    <h5 class="card-title text-primary">Bases de Datos</h5>
-    <p class="card-text">Curso de SQL Server y modelado de datos.</p>
+    <h5 class="card-title text-primary">Power BI</h5>
+    <p class="card-text">Power BI</p>
     <a href="https://drive.google.com/file/d/1tuv6hD8ThuiEUJl0aAYyyxDCrMj0lUE4/view?usp=drive_link" class="btn btn-primary w-100">Ver Credencial</a>
   </div>
 </div>
 <div class="card bg-dark text-white border-primary" style="width: 18rem;">
   <img src="https://github.com/FacuNeffa/Portfolio/blob/main/Certificados/MVC-EF.png" class="card-img-top" alt="Certificación">
   <div class="card-body">
-    <h5 class="card-title text-primary">Bases de Datos</h5>
-    <p class="card-text">Curso de SQL Server y modelado de datos.</p>
-    <a href="https://drive.google.com/file/d/1T5H2SIswjr7-LCEpV0cD2KWs4cqxHQ3j/view?usp=drive_link" class="btn btn-primary w-100">Ver Credencial</a>
+    <h5 class="card-title text-primary">MVC + EF</h5>
+    <p class="card-text">MVC + EF</p>
+    <a href="https://github.com/FacuNeffa/Portfolio/blob/main/Certificados/_Certificado-Curso%20C%23%20Nivel%204%20%5BMVC%20%2B%20EF%5D-Facundo%20Neffa.pdf">Ver Credencial</a>
   </div>
 </div>
     </div>
@@ -165,3 +165,4 @@
 
 </body>
 </html>
+
