--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <div class="card-body">
     <h5 class="card-title text-primary">MVC + EF</h5>
     <p class="card-text">MVC + EF</p>
-    <a href="https://github.com/FacuNeffa/Portfolio/blob/main/Certificados/_Certificado-Curso%20C%23%20Nivel%204%20%5BMVC%20%2B%20EF%5D-Facundo%20Neffa.pdf">Ver Credencial</a>
+    <a href="https://drive.google.com/file/d/1T5H2SIswjr7-LCEpV0cD2KWs4cqxHQ3j/view?usp=drive_link">Ver Credencial</a>
   </div>
 </div>
     </div>
@@ -165,4 +165,5 @@
 
 </body>
 </html>
+
 
