Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   </div>
 </div>
 <div class="card bg-dark text-white border-primary" style="width: 18rem;">
-  <img src="https://github.com/FacuNeffa/Portfolio/blob/main/Certificados/MVC-EF.png" class="card-img-top" alt="Certificación">
+  <img src="https://raw.githubusercontent.com/FacuNeffa/Portfolio/main/Certificados/MVC-EF.png" class="card-img-top" alt="Certificación">
   <div class="card-body">
     <h5 class="card-title text-primary">MVC + EF</h5>
     <p class="card-text">MVC + EF</p>
@@ -165,5 +165,6 @@
 
 </body>
 </html>
+
 
 
