--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <h2>Certificaciones</h2>
     <div class="cert-grid">
         <div class="card bg-dark text-white border-primary" style="width: 18rem;">
-  <img src="C:\Users\jneffa\Desktop\Facundo Neffa\Certificados\Bases de datos.jpeg" class="card-img-top" alt="Certificación">
+  <img src="https://raw.githubusercontent.com/FacuNeffa/Portfolio/main/Certificados/Bases de datos.jpeg" class="card-img-top" alt="Certificación">
   <div class="card-body">
     <h5 class="card-title text-primary">Bases de Datos</h5>
     <p class="card-text">Curso de SQL Server y modelado de datos.</p>
@@ -114,7 +114,7 @@
 </div>
 
         <div class="card bg-dark text-white border-primary" style="width: 18rem;">
-  <img src="C:\Users\jneffa\Desktop\Facundo Neffa\Certificados\Power BI.jpeg" class="card-img-top" alt="Certificación">
+  <img src="https://raw.githubusercontent.com/FacuNeffa/Portfolio/main/Certificados/Power BI.jpeg" class="card-img-top" alt="Certificación">
   <div class="card-body">
     <h5 class="card-title text-primary">Power BI</h5>
     <p class="card-text">Power BI</p>
@@ -165,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
