--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <div class="card-body">
     <h5 class="card-title text-primary">MVC + EF</h5>
     <p class="card-text">MVC + EF</p>
-    <a href="https://drive.google.com/file/d/1T5H2SIswjr7-LCEpV0cD2KWs4cqxHQ3j/view?usp=drive_link">Ver Credencial</a>
+    <a href="https://drive.google.com/file/d/1T5H2SIswjr7-LCEpV0cD2KWs4cqxHQ3j/view?usp=drive_link" class="btn btn-primary w-100">Ver Credencial</a>
   </div>
 </div>
     </div>
@@ -165,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
