--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <img src="https://raw.githubusercontent.com/FacuNeffa/Portfolio/main/Certificados/Power BI.jpeg" class="card-img-top" alt="Certificación">
   <div class="card-body">
     <h5 class="card-title text-primary">Power BI</h5>
-    <p class="card-text">Power BI</p>
+    <p class="card-text">Business Intelligence</p>
     <a href="https://drive.google.com/file/d/1tuv6hD8ThuiEUJl0aAYyyxDCrMj0lUE4/view?usp=drive_link" class="btn btn-primary w-100">Ver Credencial</a>
   </div>
 </div>
@@ -125,7 +125,7 @@
   <img src="https://raw.githubusercontent.com/FacuNeffa/Portfolio/main/Certificados/MVC-EF.png" class="card-img-top" alt="Certificación">
   <div class="card-body">
     <h5 class="card-title text-primary">MVC + EF</h5>
-    <p class="card-text">MVC + EF</p>
+    <p class="card-text">Model View Controller + Entity Framework</p>
     <a href="https://drive.google.com/file/d/1T5H2SIswjr7-LCEpV0cD2KWs4cqxHQ3j/view?usp=drive_link" class="btn btn-primary w-100">Ver Credencial</a>
   </div>
 </div>
@@ -165,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
