--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Facundo Neffa | .NET Backend Developer</title>
     <style>
-    /* Estilos Generales */
     body {
         margin: 0; padding: 0;
         background-color: #0a0a0b;
@@ -35,7 +34,6 @@
 
     .date { color: #0078d4; font-weight: bold; display: block; font-size: 0.9rem; }
 
-    /* --- NUEVOS ESTILOS: TARJETAS Y BOTONES --- */
     .cert-grid {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -70,7 +68,6 @@
 
     .view-link:hover { background-color: #005a9e !important; }
     
-    /* Estilo para los links de contacto para que no se confundan */
     .contact-links a { color: #0078d4; text-decoration: none; }
 </style>
 </head>
@@ -86,8 +83,9 @@
         <section id="sobre-mi">
             <h2>Sobre mí</h2>
             <p>
-                Hola! soy Facundo. Desarrollador especializado en el ecosistema .NET con un fuerte enfoque en la arquitectura backend. 
-                Me apasiona construir sistemas escalables, eficientes y aplicar buenas prácticas de desarrollo para resolver problemas complejos.
+            Soy un apasionado del Backend y estudiante de programación en la UTN FRGP.
+            En mi rol actual como Desarrollador Junior, me encargo del mantenimiento de sistemas, creación de APIs y la gestión de datos. 
+            Disfruto resolver problemas complejos y aplicar lo que aprendo en la facultad para construir herramientas que realmente aporten valor al equipo y al negocio.
             </p>
         </section>
 
@@ -165,6 +163,7 @@
 
 </body>
 </html>
+
 
 
 
