Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="contact-links">
                 <p>📧 Email: <a href="facundoneffa@gmail.com">facundoneffa@gmail.com</a></p>
                 <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/facundo-neffa-02b38814b/" target="_blank">linkedin.com/in/facundo</a></p>
-                <p>💻 GitHub: <a href="https://github.com/" target="_blank">github.com/facundo</a></p>
+                <p>💻 GitHub: <a href="https://github.com/FacuNeffa" target="_blank">github.com/Facundo</a></p>
             </div>
         </section>
 
@@ -163,6 +163,7 @@
 
 </body>
 </html>
+
 
 
 
