Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         <section id="sobre-mi">
             <h2>Sobre mí</h2>
             <p>
-            Soy un apasionado del Backend y estudiante de programación en la UTN FRGP.
-            En mi rol actual como Desarrollador Junior, me encargo del mantenimiento de sistemas, creación de APIs y la gestión de datos. 
-            Disfruto resolver problemas complejos y aplicar lo que aprendo en la facultad para construir herramientas que realmente aporten valor al equipo y al negocio.
+            Desarrollador Junior y estudiante de Programacion en la UTNFRGP 
+            Me encargo del mantenimiento de sistemas, creación de APIs y la gestión de datos.
+            
             </p>
         </section>
 
@@ -163,6 +163,7 @@
 
 </body>
 </html>
+
 
 
 
