--- a/index.html
+++ b/index.html
@@ -70,9 +70,15 @@
     
     .contact-links a { color: #0078d4; text-decoration: none; }
     .escudo-inline {
-    height: 1.1em; /* Esto lo hace del mismo tamaño que tu letra */
+    height: 2.5rem;
     width: auto;
     vertical-align: middle;
+    margin: 0 8px;
+    transition: transform 0.3s ease;
+}
+
+.escudo-inline:hover {
+    transform: scale(1.2);
 }
         
 </style>
@@ -170,6 +176,7 @@
 
 </body>
 </html>
+
 
 
 
