--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
             <p>
             Desarrollador Junior y estudiante de Programacion en la UTNFRGP 
             Me encargo del mantenimiento de sistemas, creación de APIs y la gestión de datos.
-            <img src="Certificados/tigre-logo-argentina.png" class="escudo-inline">.
+            Fanatico de Pink Floyd y del Matador
+            <img src="Certificados/tigre-logo-argentina.png" class="escudo-inline">
             
             </p>
         </section>
@@ -176,6 +177,7 @@
 
 </body>
 </html>
+
 
 
 
