Fix HTML formatting and clean up code

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <section id="sobre-mi">
             <h2>Sobre mí</h2>
             <p>
-            Desarrollador Junior y estudiante de Programacion en la UTNFRGP 
+            Desarrollador Junior y estudiante de Programacion en la UTNFRGP. 
             Me encargo del mantenimiento de sistemas, creación de APIs y la gestión de datos.
             Fanatico de Pink Floyd y del Matador
             <img src="Certificados/tigre-logo-argentina.png" class="escudo-inline">
@@ -177,6 +177,7 @@
 
 </body>
 </html>
+
 
 
 
